[project]
name = "mlaunch-mcp"
version = "0.1.0"
description = "MCP server for mtools/mlaunch - MongoDB test cluster management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mlaunch-mcp = "mlaunch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlaunch_mcp"]
